redesignedoj/files_usersubmissions/25/submission.txt
7_BUILDROADS_code.cpp:1:3: error: invalid preprocessing directive #Start
    1 | # Start typing your solution here
      |   ^~~~~
